--- a/REACT/react-arrays/react-with-arrays_journal-app-entries-array/package.json
+++ b/REACT/react-arrays/react-with-arrays_journal-app-entries-array/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-state_journal-app-favorite-button",
+  "name": "react-with-arrays_journal-app-entries-array",
   "version": "0.0.0-unreleased",
   "private": true,
   "dependencies": {
@@ -35,7 +35,7 @@
       "last 1 safari version"
     ]
   },
-  "description": "React State: Journal App with Favorite Button State",
+  "description": "React with Arrays: Journal App with Entries Array",
   "nf": {
     "template": "cra"
   }
